Apply the z-index to the clock only, otherwise the refresh button stops being clickable.
Also, check if there's a referrer before redirecting to it, preventing
an endless loop (when called incorrectly).

--- a/www/style.css
+++ b/www/style.css
@@ -143,6 +143,7 @@ span.diff-new {
 	border: 1px dashed #ccc;
 	padding: 4px;
 	color: gray;
+	z-index: -1;
 }
 #timeleft { color: #800080;}
 #refresh {
